SPANISH: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107575 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
@@ -3,6 +3,7 @@ label.button.cancel=Cancelar
 label.classify.dialog.title=Clasificar fichero
 label.classify.dialog.title.rm=Clasificar documento de archivo
 label.classify.levels=Clasificaci\u00f3n
+label.classify.by=Clasificado por
 label.classify.agency=Agencia de clasificaci\u00f3n
 label.classify.reasons=Razones de clasificaci\u00f3n
 label.classify.content.success=Contenido clasificado correctamente
