--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -60,6 +60,7 @@ label.versionDescription=Descripci\u00f3n de la versi\u00f3n
 label.VersionLabel=Etiqueta de la versi\u00f3n
 label.initialClassification=Clasificaci\u00f3n inicial
 label.currentClassification=Clasificaci\u00f3n actual
+label.classifiedBy=Clasificado por
 label.classificationAgency=Agencia de clasificaci\u00f3n
 label.classificationReasons=Razones para la clasificaci\u00f3n
 
