FRENCH: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107576 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -60,6 +60,7 @@ label.versionDescription=Description de la version
 label.VersionLabel=Libell\u00e9 de la version
 label.initialClassification=Classement initial
 label.currentClassification=Classement actuel
+label.classifiedBy=Classé par
 label.classificationAgency=Agence de classement
 label.classificationReasons=Motif(s) du classement
 
