FRENCH: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107577 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_fr.properties
@@ -4,7 +4,7 @@ label.classify.dialog.title=Classer le fichier
 label.classify.dialog.title.rm=Classer le document d'archives
 label.classify.levels=Classement
 label.classify.agency=Agence de classement
-label.classify.by=Classé par
+label.classify.by=Class\u00e9 par
 label.classify.reasons=Motif(s) du classement
 label.classify.content.success=Le contenu a bien \u00e9t\u00e9 class\u00e9
 label.classify.content.failure=Impossible de classer le contenu
