--- a/rm-share/config/alfresco/messages/rm_it.properties
+++ b/rm-share/config/alfresco/messages/rm_it.properties
@@ -60,6 +60,7 @@ label.versionDescription=Descrizione versione
 label.VersionLabel=Etichetta versione
 label.initialClassification=Classificazione iniziale
 label.currentClassification=Classificazione attuale
+label.classifiedBy=Classificato da
 label.classificationAgency=Agenzia di classificazione
 label.classificationReasons=Motivo/i di classificazione
 
