--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_it.properties
@@ -3,6 +3,7 @@ label.button.cancel=Annulla
 label.classify.dialog.title=Classifica file
 label.classify.dialog.title.rm=Classifica record
 label.classify.levels=Classificazione
+label.classify.by=Classificato da
 label.classify.agency=Agenzia di classificazione
 label.classify.reasons=Motivo/i di classificazione
 label.classify.content.success=Classificazione contenuti riuscita
