--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -60,6 +60,7 @@ label.versionDescription=\u30d0\u30fc\u30b8\u30e7\u30f3\u306e\u8aac\u660e
 label.VersionLabel=\u30d0\u30fc\u30b8\u30e7\u30f3\u30e9\u30d9\u30eb
 label.initialClassification=\u6700\u521d\u306e\u5206\u985e
 label.currentClassification=\u73fe\u5728\u306e\u5206\u985e
+label.classifiedBy=\u5206\u985e\u62c5\u5f53\u8005
 label.classificationAgency=\u5206\u985e\u6a5f\u95a2
 label.classificationReasons=\u5206\u985e\u7406\u7531
 
