--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
@@ -3,6 +3,7 @@ label.button.cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
 label.classify.dialog.title=\u30d5\u30a1\u30a4\u30eb\u306e\u5206\u985e
 label.classify.dialog.title.rm=\u30ec\u30b3\u30fc\u30c9\u306e\u5206\u985e
 label.classify.levels=\u5206\u985e
+label.classify.by=\u5206\u985e\u62c5\u5f53\u8005
 label.classify.agency=\u5206\u985e\u6a5f\u95a2
 label.classify.reasons=\u5206\u985e\u7406\u7531
 label.classify.content.success=\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u5206\u985e\u3055\u308c\u307e\u3057\u305f
