NORWEGIAN Bokmal: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107580 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
@@ -3,6 +3,7 @@ label.button.cancel=Avbryt
 label.classify.dialog.title=Klassifiser fil
 label.classify.dialog.title.rm=Klassifiser oppf\u00f8ring
 label.classify.levels=Klassifisering
+label.classify.by=Klassifisert av
 label.classify.agency=Klassifiseringsorgan
 label.classify.reasons=Klassifiseringsgrunn(er)
 label.classify.content.success=Innholdet er n\u00e5 klassifisert
