DUTCH: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107581 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nl.properties
+++ b/rm-share/config/alfresco/messages/rm_nl.properties
@@ -60,6 +60,7 @@ label.versionDescription=Beschrijving van versie
 label.VersionLabel=Label voor versie
 label.initialClassification=Aanvankelijke classificatie
 label.currentClassification=Huidige classificatie
+label.classifiedBy=Geclassificeerd door
 label.classificationAgency=Classificatiebureau
 label.classificationReasons=Reden(en) voor classificatie
 
