--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nl.properties
@@ -3,6 +3,7 @@ label.button.cancel=Annuleren
 label.classify.dialog.title=Bestand classificeren
 label.classify.dialog.title.rm=Record classificeren
 label.classify.levels=Classificatie
+label.classify.by=Geclassificeerd door
 label.classify.agency=Classificatiebureau
 label.classify.reasons=Classificatiereden(en)
 label.classify.content.success=Content is geclassificeerd
