BRAZILIAN Portuguese: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107585 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_pt_BR.properties
@@ -3,7 +3,8 @@ label.button.cancel=Cancelar
 label.classify.dialog.title=Classificar arquivo
 label.classify.dialog.title.rm=Classificar registro
 label.classify.levels=Classifica\u00e7\u00e3o
-label.classify.agency=Ag\u00eancia de classifica\u00e7\u00e3o
+label.classify.by=Classificado por
+label.classify.agency=\u00d3rg\u00e3o de classifica\u00e7\u00e3o
 label.classify.reasons=Motivo(s) da classifica\u00e7\u00e3o
 label.classify.content.success=Conte\u00fado classificado corretamente
 label.classify.content.failure=N\u00e3o foi poss\u00edvel classificar conte\u00fado
