--- a/rm-share/config/alfresco/messages/rm_pt_BR.properties
+++ b/rm-share/config/alfresco/messages/rm_pt_BR.properties
@@ -60,7 +60,8 @@ label.versionDescription=Descri\u00e7\u00e3o da vers\u00e3o
 label.VersionLabel=R\u00f3tulo de vers\u00e3o
 label.initialClassification=Classifica\u00e7\u00e3o inicial
 label.currentClassification=Classifica\u00e7\u00e3o atual
-label.classificationAgency=Ag\u00eancia de classifica\u00e7\u00e3o
+label.classifiedBy=Classificado por
+label.classificationAgency=\u00d3rg\u00e3o de classifica\u00e7\u00e3o
 label.classificationReasons=Motivo(s) da classifica\u00e7\u00e3o
 
 ## Common Property Selector
