SIMP CHINESE: Updated RM 3.0 bundle based on EN-RM-rev107474 and fix for RM-2219 and localisation for RM-2333
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@107586 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_zh_CN.properties
+++ b/rm-share/config/alfresco/messages/rm_zh_CN.properties
@@ -60,6 +60,7 @@ label.versionDescription=\u7248\u672c\u8bf4\u660e
 label.VersionLabel=\u7248\u672c\u6807\u7b7e
 label.initialClassification=\u521d\u59cb\u5206\u7c7b
 label.currentClassification=\u5f53\u524d\u5206\u7c7b
+label.classifiedBy=\u5206\u7c7b\u4eba
 label.classificationAgency=\u5206\u7c7b\u4ee3\u7406
 label.classificationReasons=\u5206\u7c7b\u539f\u56e0
 
