--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_zh_CN.properties
@@ -3,6 +3,7 @@ label.button.cancel=\u53d6\u6d88
 label.classify.dialog.title=\u5206\u7c7b\u6587\u4ef6
 label.classify.dialog.title.rm=\u5206\u7c7b\u8bb0\u5f55
 label.classify.levels=\u5206\u7c7b
+label.classify.by=\u5206\u7c7b\u4eba
 label.classify.agency=\u5206\u7c7b\u4ee3\u7406
 label.classify.reasons=\u5206\u7c7b\u539f\u56e0
 label.classify.content.success=\u5df2\u6210\u529f\u5206\u7c7b\u5185\u5bb9
