RM-2422 (Reuse existing classify file dialog for edit classification)
+review RM

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@108909 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,10 +1,15 @@
 label.button.create=Classify
+label.button.edit=Edit
 label.button.cancel=Cancel
 label.classify.dialog.title=Classify File
 label.classify.dialog.title.rm=Classify Record
+label.edit.classification.dialog.title=Edit Classified File
+label.edit.classification.dialog.title.rm=Edit Classified Record
 label.classify.levels=Classification
 label.classify.by=Classified By
 label.classify.agency=Classification Agency
 label.classify.reasons=Classification Reason(s)
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
+label.edit.classified.content.success=Successfully edited classified content
+label.edit.classified.content.failure=Couldn't edit classified content
