RM-2403 (Extend classification dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109040 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -9,6 +9,14 @@ label.classify.levels=Classification
 label.classify.by=Classified By
 label.classify.agency=Classification Agency
 label.classify.reasons=Classification Reason(s)
+label.classify.downgradeSchedule=Downgrade Schedule
+label.classify.downgradeDate=Downgrade date
+label.classify.downgradeEvent=Event
+label.classify.downgradeInstructions=Instructions
+label.classify.declassificationSchedule=Declassification Schedule
+label.classify.declassificationDate=Declassification date
+label.classify.declassificationEvent=Event
+label.classify.declassificationExemptions=Exemptions
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
