--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -21,3 +21,4 @@ label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
 label.edit.classified.content.failure=Couldn't edit classified content
+label.classify.classifiedBy.validation.error=Must not be blank and cannot start with a whitespace
