--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -17,6 +17,8 @@ label.classify.declassificationSchedule=Declassification Schedule
 label.classify.declassificationDate=Declassification date
 label.classify.declassificationEvent=Event
 label.classify.declassificationExemptions=Exemptions
+label.classify.lastReclassifyBy=Reclassified by
+label.classify.lastReclassifyReason=Reason for reclassifying
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
