RM-2403 (Extend classification dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109436 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -8,14 +8,20 @@ label.edit.classification.dialog.title.rm=Edit Classified Record
 label.classify.levels=Classification
 label.classify.by=Classified By
 label.classify.agency=Classification Agency
+# FIXME: See RM-1953
+label.classify.agency.help=Classification Agency Help
 label.classify.reasons=Classification Reason(s)
 label.classify.downgradeSchedule=Downgrade Schedule
 label.classify.downgradeDate=Downgrade date
 label.classify.downgradeEvent=Event
+# FIXME: See RM-1953
+label.classify.downgradeEvent.help=Downgrade Event Help
 label.classify.downgradeInstructions=Instructions
 label.classify.declassificationSchedule=Declassification Schedule
 label.classify.declassificationDate=Declassification date
 label.classify.declassificationEvent=Event
+# FIXME: See RM-1953
+label.classify.declassificationEvent.help=Declassification Event Help
 label.classify.declassificationExemptions=Exemptions
 label.classify.lastReclassifyBy=Reclassified by
 label.classify.lastReclassifyReason=Reason for reclassifying
