RM-2373 (The Classified By field has to be validated on the UI not to accept only space, text starting with spaces or empty values)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109547 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -29,4 +29,4 @@ label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
 label.edit.classified.content.failure=Couldn't edit classified content
-label.classify.classifiedBy.validation.error=Must not be blank and cannot start with a whitespace
+label.classify.classifiedBy.validation.error=Must not be blank and cannot start/end with a whitespace
