RM-2434 (Extend edit classification dialog to show reclassified by and reason and show information message about reclassification)  * Added notification banner when a classified content is upgraded/downgraded or declassified
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109853 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -29,4 +29,8 @@ label.classify.content.success=Successfully classified content
 label.classify.content.failure=Couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
 label.edit.classified.content.failure=Couldn't edit classified content
+label.edit.classified.content.reclassificationInformation=You are about to {0} this file.
+label.edit.classified.content.upgrade=upgrade
+label.edit.classified.content.downgrade=downgrade
+label.edit.classified.content.declassify=declassify
 label.classify.classifiedBy.validation.error=This must not be blank and cannot start/end with a whitespace
