RM-2503 (Change "Edit" button to "Save" on edit classification dialog)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@109995 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -1,5 +1,5 @@
 label.button.create=Classify
-label.button.edit=Edit
+label.button.save=Save
 label.button.cancel=Cancel
 label.classify.dialog.title=Classify File
 label.classify.dialog.title.rm=Classify Record
