--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -8,29 +8,26 @@ label.edit.classification.dialog.title.rm=Edit Classified Record
 label.classify.levels=Classification
 label.classify.by=Classified By
 label.classify.agency=Classification Agency
-# FIXME: See RM-1953
-label.classify.agency.help=Classification Agency Help
+label.classify.agency.help=The agency, such as a government or legal body, that regulates classification. (optional)
 label.classify.reasons=Classification Reason(s)
 label.classify.downgradeSchedule=Downgrade Schedule
-label.classify.downgradeDate=Downgrade date
+label.classify.downgradeDate=Downgrade Date
 label.classify.downgradeEvent=Event
-# FIXME: See RM-1953
-label.classify.downgradeEvent.help=Downgrade Event Help
+label.classify.downgradeEvent.help=The event that will trigger the classification downgrade. The downgrade will not happen automatically after this event - it needs to be done manually.
 label.classify.downgradeInstructions=Instructions
 label.classify.declassificationSchedule=Declassification Schedule
-label.classify.declassificationDate=Declassification date
+label.classify.declassificationDate=Declassification Date
 label.classify.declassificationEvent=Event
-# FIXME: See RM-1953
-label.classify.declassificationEvent.help=Declassification Event Help
+label.classify.declassificationEvent.help=The event that will trigger declassification. Declassification will not happen automatically after this event - it needs to be done manually. 
 label.classify.declassificationExemptions=Exemptions
 label.classify.lastReclassifyBy=Reclassified by
-label.classify.lastReclassifyReason=Reason for reclassifying
+label.classify.lastReclassifyReason=Reason for Reclassification
 label.classify.content.success=Successfully classified content
-label.classify.content.failure=Couldn't classify content
+label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
-label.edit.classified.content.failure=Couldn't edit classified content
-label.edit.classified.content.reclassificationInformation=You are about to {0} this file.
+label.edit.classified.content.failure=We couldn't edit classified content
+label.edit.classified.content.reclassificationInformation=You're about to {0} this file.
 label.edit.classified.content.upgrade=upgrade
 label.edit.classified.content.downgrade=downgrade
 label.edit.classified.content.declassify=declassify
-label.classify.classifiedBy.validation.error=This must not be blank and cannot start/end with a whitespace
+label.classify.classifiedBy.validation.error=You need to enter a name that doesn’t start or end with a whitespace.
