RM-2534 (Extend classification dialog to allow editing of last reclassified information)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110503 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService.properties
@@ -18,10 +18,16 @@ label.classify.downgradeInstructions=Instructions
 label.classify.declassificationSchedule=Declassification Schedule
 label.classify.declassificationDate=Declassification Date
 label.classify.declassificationEvent=Event
-label.classify.declassificationEvent.help=The event that will trigger declassification. Declassification will not happen automatically after this event - it needs to be done manually. 
+label.classify.declassificationEvent.help=The event that will trigger declassification. Declassification will not happen automatically after this event - it needs to be done manually.
 label.classify.declassificationExemptions=Exemptions
-label.classify.lastReclassifyBy=Reclassified by
-label.classify.lastReclassifyReason=Reason for Reclassification
+label.classify.reclassifyBy=Reclassified By
+label.classify.reclassifyReason=Reason
+label.classify.lastReclassifyBy=Last Reclassified By
+label.classify.lastReclassifyReason=Reason
+#FIXME: Change the help text
+label.classify.lastReclassifyBy.help=Last Reclassified By Help
+#FIXME: Change the help text
+label.classify.lastReclassifyReason.help=Reason Help
 label.classify.content.success=Successfully classified content
 label.classify.content.failure=We couldn't classify content
 label.edit.classified.content.success=Successfully edited classified content
