GERMAN: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110669 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_de.properties
+++ b/rm-share/config/alfresco/messages/rm_de.properties
@@ -63,6 +63,16 @@ label.currentClassification=Momentane Klassifizierung
 label.classifiedBy=Klassifiziert von
 label.classificationAgency=Klassifizierungsbeh\u00f6rde
 label.classificationReasons=Grund/Gr\u00fcnde f\u00fcr Klassifizierung
+label.downgradeDate=Herunterstufungsdatum
+label.downgradeEvent=Herunterstufungsereignis
+label.downgradeInstructions=Herunterstufungsanweisungen
+label.declassificationDate=Deklassifizierungsdatum
+label.declassificationEvent=Deklassifizierungsereignis
+label.declassificationExemptions=Deklassifizierungsausnahmen
+label.lastReclassifyBy=Zuletzt reklassifiziert von
+label.lastReclassifyAt=Letztes Reklassifizierungsdatum
+label.lastReclassifyReason=Grund f\u00fcr letzte Reklassifizierung
+label.lastReclassificationAction=Letzte Reklassifizierungsaktion
 
 ## Common Property Selector
 label.menu.content=Inhalt
@@ -158,6 +168,7 @@ actions.move-dm-record=Record verschieben
 actions.recorded-version-config=Optionen f\u00fcr automatische Deklaration
 actions.add-relationship=Beziehung hinzuf\u00fcgen
 actions.classify-content=Klassifizieren
+actions.edit-classified-content=Klassifizierung bearbeiten
 
 ## File Plan Action Outcomes
 message.multi-select={0} ausgew\u00e4hlte Elemente
