SPANISH: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110670 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_es.properties
+++ b/rm-share/config/alfresco/messages/rm_es.properties
@@ -63,6 +63,16 @@ label.currentClassification=Clasificaci\u00f3n actual
 label.classifiedBy=Clasificado por
 label.classificationAgency=Agencia de clasificaci\u00f3n
 label.classificationReasons=Razones para la clasificaci\u00f3n
+label.downgradeDate=Fecha de degradaci\u00f3n
+label.downgradeEvent=Evento de degradaci\u00f3n
+label.downgradeInstructions=Instrucciones de degradaci\u00f3n
+label.declassificationDate=Fecha de desclasificaci\u00f3n
+label.declassificationEvent=Evento de desclasificaci\u00f3n
+label.declassificationExemptions=Exenciones de desclasificaci\u00f3n
+label.lastReclassifyBy=Reclasificado por \u00faltima vez por
+label.lastReclassifyAt=\u00daltima fecha de reclasificaci\u00f3n
+label.lastReclassifyReason=\u00daltima raz\u00f3n de reclasificaci\u00f3n
+label.lastReclassificationAction=\u00daltima acci\u00f3n de reclasificaci\u00f3n
 
 ## Common Property Selector
 label.menu.content=Contenido
@@ -158,6 +168,7 @@ actions.move-dm-record=Mover documento de archivo
 actions.recorded-version-config=Opciones de declaraci\u00f3n autom\u00e1tica
 actions.add-relationship=A\u00f1adir Relaci\u00f3n
 actions.classify-content=Clasificar
+actions.edit-classified-content=Editar clasificaci\u00f3n
 
 ## File Plan Action Outcomes
 message.multi-select={0} elementos seleccionados
