--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_es.properties
@@ -1,10 +1,33 @@
 label.button.create=Clasificar
+label.button.save=Guardar
 label.button.cancel=Cancelar
 label.classify.dialog.title=Clasificar fichero
 label.classify.dialog.title.rm=Clasificar documento de archivo
+label.edit.classification.dialog.title=Editar fichero clasificado
+label.edit.classification.dialog.title.rm=Editar documento de archivo clasificado
 label.classify.levels=Clasificaci\u00f3n
 label.classify.by=Clasificado por
 label.classify.agency=Agencia de clasificaci\u00f3n
+label.classify.agency.help=La agencia, como pueda ser un organismo legal o gubernamental, que regula la clasificaci\u00f3n. (opcional)
 label.classify.reasons=Razones de clasificaci\u00f3n
+label.classify.downgradeSchedule=Planificaci\u00f3n de degradaci\u00f3n
+label.classify.downgradeDate=Fecha de degradaci\u00f3n
+label.classify.downgradeEvent=Evento
+label.classify.downgradeEvent.help=El evento que ejecutar\u00e1 la degradaci\u00f3n de clasificaci\u00f3n. La degradaci\u00f3n no se producir\u00e1 autom\u00e1ticamente despu\u00e9s de este evento; deber\u00e1 realizarse de modo manual.
+label.classify.downgradeInstructions=Instrucciones
+label.classify.declassificationSchedule=Planificaci\u00f3n de desclasificaci\u00f3n
+label.classify.declassificationDate=Fecha de desclasificaci\u00f3n
+label.classify.declassificationEvent=Evento
+label.classify.declassificationEvent.help=El evento que ejecutar\u00e1 la desclasificaci\u00f3n. La desclasificaci\u00f3n no se producir\u00e1 autom\u00e1ticamente despu\u00e9s de este evento; deber\u00e1 realizarse de modo manual. 
+label.classify.declassificationExemptions=Exenciones
+label.classify.lastReclassifyBy=Reclasificado por
+label.classify.lastReclassifyReason=Raz\u00f3n de la reclasificaci\u00f3n
 label.classify.content.success=Contenido clasificado correctamente
 label.classify.content.failure=No se ha podido clasificar el contenido
+label.edit.classified.content.success=Contenido clasificado editado correctamente
+label.edit.classified.content.failure=No se ha podido editar el contenido clasificado
+label.edit.classified.content.reclassificationInformation=Va a {0} este fichero.
+label.edit.classified.content.upgrade=actualizar
+label.edit.classified.content.downgrade=degradar
+label.edit.classified.content.declassify=desclasificar
+label.classify.classifiedBy.validation.error=Debe introducir un nombre que no comience ni termine con un espacio en blanco.
