FRENCH: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110671 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_fr.properties
+++ b/rm-share/config/alfresco/messages/rm_fr.properties
@@ -63,6 +63,16 @@ label.currentClassification=Classement actuel
 label.classifiedBy=Class\u00e9 par
 label.classificationAgency=Agence de classement
 label.classificationReasons=Motif(s) du classement
+label.downgradeDate=Date de r\u00e9trogradation
+label.downgradeEvent=Ev\u00e9nement de r\u00e9trogradation
+label.downgradeInstructions=Instructions de r\u00e9trogradation
+label.declassificationDate=Date de d\u00e9classification
+label.declassificationEvent=Ev\u00e9nement de d\u00e9classification
+label.declassificationExemptions=Exemptions de d\u00e9classification
+label.lastReclassifyBy=Derni\u00e8re reclassification par
+label.lastReclassifyAt=Date de la derni\u00e8re reclassification
+label.lastReclassifyReason=Motif de la derni\u00e8re reclassification
+label.lastReclassificationAction=Derni\u00e8re action de reclassification
 
 ## Common Property Selector
 label.menu.content=Contenu
@@ -158,6 +168,7 @@ actions.move-dm-record=D\u00e9placer le document d'archives
 actions.recorded-version-config=Options de d\u00e9claration automatique
 actions.add-relationship=Ajouter une relation
 actions.classify-content=Classer
+actions.edit-classified-content=Modifier la classification
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u00e9l\u00e9ments s\u00e9lectionn\u00e9s
