ITALIAN: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110672 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/config/components/fileplan/events.get_it.properties
@@ -9,12 +9,12 @@ message.revokeEventFailure=Impossibile revocare l'evento
 label.automatic=Automatico
 label.manual=Manuale
 label.completedBy=Completato da
-label.completedAt=Completato su
-label.asOf=In data
-label.noDispositionSchedule=Ciclo di vita disposizione non presente.
-label.noEventsInDispositionSchedule=Non sono presenti eventi per il passo ''{0}''.
-label.completeDispositionSchedule=Ciclo di vita disposizione completato.
-label.dispositionScheduleAppliedToFolder=Pianificazione della disposizione applicata alla cartella di record superiore, in data: {0}.
+label.completedAt=Completato in data
+label.asOf=Data di inizio
+label.noDispositionSchedule=Ciclo di vita di amministrazione non presente.
+label.noEventsInDispositionSchedule=Non sono presenti eventi per il passaggio ''{0}''.
+label.completeDispositionSchedule=Ciclo di vita di amministrazione completato.
+label.dispositionScheduleAppliedToFolder=Programma di amministrazione applicato alla cartella di record superiore, con data di inizio: {0}.
 label.linkToFoldersDispositionSchedule=Visualizza eventi cartella superiore
 label.loadFailure=Impossibile caricare eventi
 button.completeEvent=Completa evento
