--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/console/rm-audit.get_it.properties
@@ -35,7 +35,7 @@ label.button-view-log=Visualizza log completo
 label.button-specify=Specifica
 label.button-export=Esporta
 label.button-file-record=Archivia come record
-label.button-apply=Esegui report audit
+label.button-apply=Esegui rapporto audit
 label.button-details=Dettagli
 
 label.filed-log-message=Il log di audit \u00e8 stato archiviato come record.
