--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get_it.properties
@@ -19,7 +19,7 @@ button.setDefaultView=Imposta ''{0}'' come predefinito per questa cartella
 button.removeDefaultView=Rimuovi ''{0}'' come predefinito per questa cartella
 button.electronic=Elettronico
 button.non-electronic=Non elettronico
-button.report=Report
+button.report=Rapporto
 button.manage-rules=Gestisci regole
 button.options=Opzioni
 
@@ -39,8 +39,8 @@ label.new-rma_nonElectronicDocument.header=Dettagli record
 menu.selected-items=Elementi selezionati...
 menu.selected-items.deselect-all=Deseleziona tutto
 
-menu.selected-items.accession=Inserimento
-menu.selected-items.accession-complete=Conferma inserimento
+menu.selected-items.accession=Trasferimento ad altri
+menu.selected-items.accession-complete=Conferma trasferimento ad altri
 menu.selected-items.copy-to=Copia in...
 menu.selected-items.cutoff=Cut off
 menu.selected-items.delete=Elimina
@@ -49,7 +49,7 @@ menu.selected-items.export=Esporta
 menu.selected-items.link-to=Collega a...
 menu.selected-items.file-to=Archivia su...
 menu.selected-items.move-to=Sposta in...
-menu.selected-items.reviewed=Rivisto
+menu.selected-items.reviewed=Esaminato
 menu.selected-items.transfer=Trasferisci
 menu.selected-items.transfer-complete=Conferma trasferimento
 menu.selected-items.undo-cutoff=Annulla cut off
@@ -82,7 +82,7 @@ description.path.more=
 description.savedsearch=Risultati della ricerca salvata
 description.savedsearch.more=''{0}''
 description.transfers=Trasferimenti
-description.transfers.more=(Record in attesa del completamento del trasferimento o dell'inserimento)
+description.transfers.more=(Record in attesa del completamento del trasferimento o del trasferimento ad altri)
 description.transfers.more.filterDisplay=visualizzazione di ''{0}''
 description.holds=Sospensioni attive
 description.holds.more=(Record e cartelle di record in sospeso)
