--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/savedsearch.get_it.properties
@@ -1,8 +1,8 @@
 ## Title
 header.savedsearch=Ricerche salvate
 
-rm.savedsearch.vitalRecordsName=Record fondamentali da revisionare
-rm.savedsearch.vitalRecordsDesc=Tutti i record attualmente da revisionare.
+rm.savedsearch.vitalRecordsName=Record fondamentali da esaminare
+rm.savedsearch.vitalRecordsDesc=Tutti i record attualmente da esaminare.
 
 rm.savedsearch.incompleteRecordsName=Record incompleti
 rm.savedsearch.incompleteRecordsDesc=Tutti i record incompleti.
@@ -13,8 +13,8 @@ rm.savedsearch.cutoffRecordsDesc=Tutti i record e le cartelle di record attualme
 rm.savedsearch.transferRecordsName=Record e cartelle di record idonei per il trasferimento
 rm.savedsearch.transferRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per il trasferimento.
 
-rm.savedsearch.destructionRecordsName=Record e cartelle di record idonei per l'eliminazione permanente
-rm.savedsearch.destructionRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per l'eliminazione permanente.
+rm.savedsearch.destructionRecordsName=Record e cartelle di record idonei per l'eliminazione definitiva
+rm.savedsearch.destructionRecordsDesc=Tutti i record e le cartelle di record attualmente idonei per l'eliminazione definitiva.
 
 rm.savedsearch.frozenRecordsName=Record e cartelle di record in sospeso
 rm.savedsearch.frozenRecordsDesc=Tutti i record e le cartelle di record in sospeso.
