--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get_it.properties
@@ -34,7 +34,7 @@ button.createevent=Crea evento
 button.addaction=Aggiungi passaggio
 button.createaction=Aggiungi passaggio
 
-message.getActionFailure=Impossibile ottenere pianificazione della disposizione
+message.getActionFailure=Impossibile ottenere il programma di amministrazione
 message.savingAction=Salvataggio passaggio
 message.saveActionFailure=Impossibile salvare il passaggio
 title.deleteAction=Elimina
