--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition.get_it.properties
@@ -1,14 +1,14 @@
-disposition-schedule.heading=Pianificazione della disposizione
+disposition-schedule.heading=Programma di amministrazione
 
 title.properties=Generale
-title.actions=Disposizione passaggi
+title.actions=Passaggi di amministrazione
 
-label.dispositionAuthority=Autorit\u00e0 di disposizione
-label.dispositionInstructions=Istruzioni di disposizione
+label.dispositionAuthority=Autorit\u00e0 di amministrazione
+label.dispositionInstructions=Istruzioni di amministrazione
 label.appliedTo=Applicato a
 label.appliedTo.record=Record
 label.appliedTo.folder=Cartella
-label.noactions=The Pianificazione della disposizione non contiene azioni
+label.noactions=Il programma di amministrazione non contiene azioni
 label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} dopo {1} {2}
@@ -18,5 +18,5 @@ link.description=Visualizza descrizione
 
 button.addevent=Aggiungi evento
 
-title.noDispositionSchedule=Nessuna pianificazione della disposizione trovata
-button.createDispositionSchedule=Crea pianificazione della disposizione
+title.noDispositionSchedule=Nessun programma di amministrazione trovato
+button.createDispositionSchedule=Crea programma di amministrazione
