--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/report.get_it.properties
@@ -5,8 +5,8 @@ label.recordSeriesIdentifier=Identificatore serie di record
 label.recordCategoryIdentifier=Identificatore categoria record
 label.recordFolderIdentifier=Identificatore cartella di record
 label.vitalRecordIndicator=Indicatore record fondamentale
-label.dispositionAuthority=Autorit\u00e0 di disposizione
+label.dispositionAuthority=Autorit\u00e0 di amministrazione
 label.noDispositionAuthority=Nessuna
-label.dispositionSchedule=Pianificazione della disposizione
+label.dispositionSchedule=Programma di amministrazione
 label.noActions=Nessun passaggio
 label.noActionDescription=(nessuna istruzione)
