--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get_it.properties
@@ -46,20 +46,20 @@ label.sortNext=poi per
 label.sortNone=(Nessuna)
 label.sortAscending=Crescente
 label.sortDescending=Decrescente
-label.dueForReview=Da revisionare
+label.dueForReview=Da esaminare
 label.components=Componenti
 label.recordSeries=Serie record
 label.parentFolder=Cartella superiore
 
 
 # RMA search model metadata fields
-label.dispositionEvents=Eventi di disposizione
-label.dispositionActionName=Nome dell'azione di disposizione
-label.dispositionActionAsOf=Azione di disposizione in data
-label.dispositionEventsEligible=Eventi di disposizione idonei
-label.vitalRecordReviewPeriod=Periodo di revisione record fondamentale
-label.hasDispositionSchedule=Possiede una pianificazione della disposizione
-label.dispositionPeriod=Periodo della disposizione
-label.dispositionInstructions=Istruzioni di disposizione
-label.dispositionAuthority=Autorit\u00e0 di disposizione
+label.dispositionEvents=Eventi di amministrazione
+label.dispositionActionName=Nome dell'azione di amministrazione
+label.dispositionActionAsOf=Data di inizio azione di amministrazione
+label.dispositionEventsEligible=Eventi di amministrazione idonei
+label.vitalRecordReviewPeriod=Periodo di esame record fondamentale
+label.hasDispositionSchedule=Ha un programma di amministrazione
+label.dispositionPeriod=Periodo di amministrazione
+label.dispositionInstructions=Istruzioni di amministrazione
+label.dispositionAuthority=Autorit\u00e0 di amministrazione
 label.holdReason=Motivo sospensione
