--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/rules/config/rule-config-action.get_it.properties
@@ -30,7 +30,7 @@ record.folder.path.help=<p>Digitare parte della propriet\u00e0 di un record per 
 	 <p>Le opzioni relative alla data impostano la corrispondente parte del percorso sulla data in cui la regola viene eseguita. Ad esempio, se \u00e8 eseguita di luned\u00ec:</p>\
 	 <ul><li>- Abbreviazione giorno {date.day.short} = Lun</li>\
 	 <li>- Giorno per esteso {date.day.long} = Luned\u00ec</li></ul>\
-	 <p>Si veda la guida relativa alla gestione dei record per tutte le opzioni di completamento automatico.</p>
+	 <p>Si veda la guida di Records Management per tutte le opzioni di completamento automatico.</p>
 	 <p><a href="http://docs.alfresco.com/rm2.2/references/rm-rules-substitutions.html" target="_blank">Fare clic qui per tutte le opzioni di completamento automatico.</a></p>\
 	
 fileTo.path.label=Indirizza nella cartella di record
