--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/upload/flash-upload.get_it.properties
@@ -17,7 +17,7 @@ label.failure=Operazione non riuscita
 button.upload=Carica file
 label.uploadStatus=Stato: {0}/{1} caricati ({2} non riusciti)
 message.cancelStatus=Caricamenti annullati; {0} file caricati
-message.zeroByteFileSelected=\u00c8 stato selezionato il file {0}. Impossibile caricare il file poich\u00e9 presenta dimensioni pari a 0 byte.
+message.zeroByteFileSelected=\u00c8 stato selezionato il file {0}. Impossibile caricare il file poich\u00e9 ha dimensioni pari a 0 byte.
 message.flashError.title=Errore di comunicazione con Flash
 message.flashError.message=Il browser non \u00e8 in grado di comunicare con Flash Uploader. \u00c8 possibile procedere con l'archiviazione dei record in un unico file, o aggiornare la pagina per riavviare Flash.
 
