--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_it.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/file-report.get_it.properties
@@ -1,7 +1,7 @@
 header=Seleziona destinazione della cartella di record
 node.root=Piano file
-title.single=Archivia report su...
-button.file=Archivia report
+title.single=Archivia rapporto in...
+button.file=Archivia rapporto
 message.no-files=Almeno un file deve essere specificato
-message.please-wait=Archiviazione report...
-label.unfiled-records=Archivia report su "Record non archiviati"
+message.please-wait=Archiviazione rapporto...
+label.unfiled-records=Archivia rapporto in "Record non archiviati"
