JAPANESE: Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110673 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_ja.properties
+++ b/rm-share/config/alfresco/messages/rm_ja.properties
@@ -63,6 +63,16 @@ label.currentClassification=\u73fe\u5728\u306e\u5206\u985e
 label.classifiedBy=\u5206\u985e\u62c5\u5f53\u8005
 label.classificationAgency=\u5206\u985e\u6a5f\u95a2
 label.classificationReasons=\u5206\u985e\u7406\u7531
+label.downgradeDate=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u65e5
+label.downgradeEvent=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u30a4\u30d9\u30f3\u30c8
+label.downgradeInstructions=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u624b\u9806
+label.declassificationDate=\u5206\u985e\u89e3\u9664\u65e5
+label.declassificationEvent=\u5206\u985e\u89e3\u9664\u30a4\u30d9\u30f3\u30c8
+label.declassificationExemptions=\u5206\u985e\u89e3\u9664\u306e\u5bfe\u8c61\u5916
+label.lastReclassifyBy=\u524d\u56de\u306e\u518d\u5206\u985e\u62c5\u5f53\u8005
+label.lastReclassifyAt=\u524d\u56de\u306e\u518d\u5206\u985e\u65e5
+label.lastReclassifyReason=\u524d\u56de\u306e\u518d\u5206\u985e\u7406\u7531
+label.lastReclassificationAction=\u524d\u56de\u306e\u518d\u5206\u985e\u30a2\u30af\u30b7\u30e7\u30f3
 
 ## Common Property Selector
 label.menu.content=\u30b3\u30f3\u30c6\u30f3\u30c4
@@ -158,6 +168,7 @@ actions.move-dm-record=\u30ec\u30b3\u30fc\u30c9\u306e\u79fb\u52d5
 actions.recorded-version-config=\u81ea\u52d5\u5ba3\u8a00\u30aa\u30d7\u30b7\u30e7\u30f3
 actions.add-relationship=\u95a2\u4fc2\u306e\u8ffd\u52a0
 actions.classify-content=\u5206\u985e
+actions.edit-classified-content=\u5206\u985e\u306e\u7de8\u96c6
 
 ## File Plan Action Outcomes
 message.multi-select={0} \u500b\u306e\u9078\u629e\u3055\u308c\u305f\u30a2\u30a4\u30c6\u30e0
