--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_ja.properties
@@ -1,10 +1,33 @@
 label.button.create=\u5206\u985e
+label.button.save=\u4fdd\u5b58
 label.button.cancel=\u30ad\u30e3\u30f3\u30bb\u30eb
 label.classify.dialog.title=\u30d5\u30a1\u30a4\u30eb\u306e\u5206\u985e
 label.classify.dialog.title.rm=\u30ec\u30b3\u30fc\u30c9\u306e\u5206\u985e
+label.edit.classification.dialog.title=\u5206\u985e\u6e08\u307f\u30d5\u30a1\u30a4\u30eb\u306e\u7de8\u96c6
+label.edit.classification.dialog.title.rm=\u5206\u985e\u6e08\u307f\u30ec\u30b3\u30fc\u30c9\u306e\u7de8\u96c6
 label.classify.levels=\u5206\u985e
 label.classify.by=\u5206\u985e\u62c5\u5f53\u8005
 label.classify.agency=\u5206\u985e\u6a5f\u95a2
+label.classify.agency.help=\u5206\u985e\u3092\u898f\u5236\u3057\u3066\u3044\u308b\u6a5f\u95a2 (\u653f\u5e9c\u6a5f\u95a2\u3001\u898f\u5236\u6a5f\u95a2\u306a\u3069) (\u4efb\u610f)
 label.classify.reasons=\u5206\u985e\u7406\u7531
+label.classify.downgradeSchedule=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u306e\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
+label.classify.downgradeDate=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u65e5
+label.classify.downgradeEvent=\u30a4\u30d9\u30f3\u30c8
+label.classify.downgradeEvent.help=\u5206\u985e\u306e\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u3092\u30c8\u30ea\u30ac\u30fc\u3059\u308b\u30a4\u30d9\u30f3\u30c8 \u3053\u306e\u30a4\u30d9\u30f3\u30c8\u306e\u5f8c\u306f\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9\u304c\u81ea\u52d5\u7684\u306b\u884c\u308f\u308c\u306a\u3044\u305f\u3081\u3001\u624b\u52d5\u3067\u884c\u3046\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002
+label.classify.downgradeInstructions=\u624b\u9806
+label.classify.declassificationSchedule=\u5206\u985e\u89e3\u9664\u306e\u30b9\u30b1\u30b8\u30e5\u30fc\u30eb
+label.classify.declassificationDate=\u5206\u985e\u89e3\u9664\u65e5
+label.classify.declassificationEvent=\u30a4\u30d9\u30f3\u30c8
+label.classify.declassificationEvent.help=\u5206\u985e\u89e3\u9664\u3092\u30c8\u30ea\u30ac\u30fc\u3059\u308b\u30a4\u30d9\u30f3\u30c8 \u3053\u306e\u30a4\u30d9\u30f3\u30c8\u306e\u5f8c\u306f\u5206\u985e\u89e3\u9664\u304c\u81ea\u52d5\u7684\u306b\u884c\u308f\u308c\u306a\u3044\u305f\u3081\u3001\u624b\u52d5\u3067\u884c\u3046\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059\u3002 
+label.classify.declassificationExemptions=\u5bfe\u8c61\u5916
+label.classify.lastReclassifyBy=\u518d\u5206\u985e\u62c5\u5f53\u8005
+label.classify.lastReclassifyReason=\u518d\u5206\u985e\u7406\u7531
 label.classify.content.success=\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u5206\u985e\u3055\u308c\u307e\u3057\u305f
 label.classify.content.failure=\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u5206\u985e\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+label.edit.classified.content.success=\u5206\u985e\u6e08\u307f\u30b3\u30f3\u30c6\u30f3\u30c4\u304c\u7de8\u96c6\u3055\u308c\u307e\u3057\u305f
+label.edit.classified.content.failure=\u5206\u985e\u6e08\u307f\u30b3\u30f3\u30c6\u30f3\u30c4\u3092\u7de8\u96c6\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f
+label.edit.classified.content.reclassificationInformation=\u3053\u306e\u30d5\u30a1\u30a4\u30eb\u3092 {0} \u3057\u3088\u3046\u3068\u3057\u3066\u3044\u307e\u3059\u3002
+label.edit.classified.content.upgrade=\u30a2\u30c3\u30d7\u30b0\u30ec\u30fc\u30c9
+label.edit.classified.content.downgrade=\u30c0\u30a6\u30f3\u30b0\u30ec\u30fc\u30c9
+label.edit.classified.content.declassify=\u5206\u985e\u89e3\u9664
+label.classify.classifiedBy.validation.error=\u540d\u524d\u306e\u6700\u521d\u3068\u6700\u5f8c\u306b\u7a7a\u767d\u3092\u5165\u529b\u3057\u306a\u3044\u3067\u304f\u3060\u3055\u3044
