NORWEGIAN (Bokmal): Updated RM 3.0 bundle based on EN-RM-rev110155 and fix for RM-2523
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@110674 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm_nb.properties
+++ b/rm-share/config/alfresco/messages/rm_nb.properties
@@ -63,6 +63,16 @@ label.currentClassification=N\u00e5v\u00e6rende klassifisering
 label.classifiedBy=Klassifisert av
 label.classificationAgency=Klassifiseringsorgan
 label.classificationReasons=Klassifiseringsgrunn(er)
+label.downgradeDate=Nedgraderingsdato
+label.downgradeEvent=Nedgraderingshendelse
+label.downgradeInstructions=Nedgraderingsinstruksjoner
+label.declassificationDate=Deklassifiseringsdato
+label.declassificationEvent=Deklassifiseringshendelse
+label.declassificationExemptions=Deklassifiseringsunntak
+label.lastReclassifyBy=Sist reklassifisert av
+label.lastReclassifyAt=Siste reklassifiseringsdato
+label.lastReclassifyReason=Siste reklassifiseringsgrunn
+label.lastReclassificationAction=Siste reklassifiseringshandling
 
 ## Common Property Selector
 label.menu.content=Innhold
@@ -158,6 +168,7 @@ actions.move-dm-record=Flytt oppf\u00f8ring
 actions.recorded-version-config=Alternativer med automatiske erkl\u00e6ringer
 actions.add-relationship=Legg til forhold
 actions.classify-content=Klassifiser
+actions.edit-classified-content=Rediger klassifisering
 
 ## File Plan Action Outcomes
 message.multi-select={0} valgte elementer
