--- a/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
+++ b/rm-share/source/web/js/alfresco/rm/services/i18n/ClassifyService_nb.properties
@@ -1,10 +1,33 @@
 label.button.create=Klassifiser
+label.button.save=Lagre
 label.button.cancel=Avbryt
 label.classify.dialog.title=Klassifiser fil
 label.classify.dialog.title.rm=Klassifiser oppf\u00f8ring
+label.edit.classification.dialog.title=Rediger klassifisert fil
+label.edit.classification.dialog.title.rm=Rediger klassifisert oppf\u00f8ring
 label.classify.levels=Klassifisering
 label.classify.by=Klassifisert av
 label.classify.agency=Klassifiseringsorgan
+label.classify.agency.help=Organet som f.eks. statlig eller juridisk organ, som regulerer klassifisering. (valgfritt)
 label.classify.reasons=Klassifiseringsgrunn(er)
+label.classify.downgradeSchedule=Nedgraderingsplan
+label.classify.downgradeDate=Nedgraderingsdato
+label.classify.downgradeEvent=Hendelse
+label.classify.downgradeEvent.help=Hendelsen vil utl\u00f8se klassifiseringsnedgraderingen. Nedgraderingen skjer ikke automatisk etter denne hendelsen - den m\u00e5 gj\u00f8res manuelt.
+label.classify.downgradeInstructions=Instruksjoner
+label.classify.declassificationSchedule=Deklassifiseringsplan
+label.classify.declassificationDate=Deklassifiseringsdato
+label.classify.declassificationEvent=Hendelse
+label.classify.declassificationEvent.help=Hendelse som vil utl\u00f8se deklassifisering. Deklassifisering skjer ikke automatisk etter denne hendelsen - den m\u00e5 gj\u00f8res manuelt. 
+label.classify.declassificationExemptions=Unntak
+label.classify.lastReclassifyBy=Reklassifisert av
+label.classify.lastReclassifyReason=Reklassifiseringsgrunn
 label.classify.content.success=Innholdet er n\u00e5 klassifisert
-label.classify.content.failure=Kan ikke klassifisere innholdet
+label.classify.content.failure=Vi kunne ikke klassifiseres innhold
+label.edit.classified.content.success=Klassifisert innhold er n\u00e5 redigert
+label.edit.classified.content.failure=Vi kunne ikke redigere klassifisert innhold
+label.edit.classified.content.reclassificationInformation=Du er i ferd med \u00e5 {0} denne filen.
+label.edit.classified.content.upgrade=oppgradere
+label.edit.classified.content.downgrade=nedgradere
+label.edit.classified.content.declassify=deklassifisere
+label.classify.classifiedBy.validation.error=Du m\u00e5 angi et navn som ikke begynner eller slutter med et mellomrom.
